--- a/myimages.html
+++ b/myimages.html
@@ -5,11 +5,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mycss.css">
-    <title>Google Special</title>
+    <title>Google S-Images</title>
 </head>
 <body>
-   <div id="search">
-     <a href="myimages.html">Google S-Images</a>  
+    <div id="search">
+      <a href="myproject.html">Google Special</a>
+    </div>
+   <div id="search">   
    </div> 
    <div class="one">
     <div class="row">
@@ -17,7 +19,7 @@
 
         </div>
         <div class="col">
-    <h1 class="title">GOOGLE<span class="badge text-bg-secondary">SPECIAL</span></h1>
+    <h1 class="title">GOOGLE<span class="badge text-bg-secondary">S-IMAGES</span></h1>
         </div>
         <div class="col">
 
@@ -32,35 +34,14 @@
     <div class="col" id="search"> 
    <form action="https://www.google.com/search?q">   
     <input type="text" name="q" id="search1">
+    <input type="hidden" name="tbm" value="isch">
+    <br>
+    <input type="submit" value="Image Search">
     </div>
     <div class="col">
 
     </div>
    </div> 
-  </div>
-
-  <div class="three">
-   <div class="row">
-    <div class="col">
-
-    </div>
-    <div class="col">
-
-    </div>
-    <div class="col" id="search">
-      <input type="submit" value="Google'da ara">
-    </div>
-    <div class="col" id="search">
-      <input type="submit" name="btnI" value="Kendimi şanslı hissediyorum">
-    </form>
-    </div>
-    <div class="col">
-
-    </div>
-    <div class="col">
-
-    </div>
-   </div>
   </div>
 
 </body>
